# zmqite

./: CMakeLists.txt  zmqite.c
cmake/: Findczmq.cmake
